# PatternDock

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: feeds.yaml
src/mn_event_ai/: __init__.py
src/mn_event_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mn_event_ai/api/: app.py
src/mn_event_ai/graph/: build_incident_graph.py  cluster_incidents.py
src/mn_event_ai/ingest/: dedupe.py  fetch_rss.py  inspect_snapshot.py  normalize.py
src/mn_event_ai/jobs/: run_pipeline.py
src/mn_event_ai/memory/: ntm_lite.py  retrieval.py  vector_store.py
src/mn_event_ai/nlp/: entity_extract.py  features.py  infer_textcnn.py  textcnn.py  train_textcnn.py  weak_label.py
src/mn_event_ai/predict/: drn.py  forecaster.py
