[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mn-event-ai"
version = "0.1.0"
description = "RSS → classify → cluster incidents → forecast → retrieval API (region-agnostic core)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "pyyaml>=6.0.1",
  "python-dateutil>=2.9.0.post0",
  "tqdm>=4.66.0",
  "numpy>=1.26.0",
  "torch>=2.1.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "scikit-learn>=1.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
